# a653rs-linux

./: Cargo.toml  flake.nix
examples/: hello_part.yaml
examples/hello_part/src/: main.rs
examples/hello_part/src/beispiel_bojan/: Cargo.toml
examples/hello_part/src/beispiel_bojan/src/: main.rs
