[workspace]
resolver = "2"

members = [
    "hypervisor",
    "partition",
    "core",

    "examples/hello_part",

    "examples/fuel_tank_simulation",
    "examples/fuel_tank_controller",

    "examples/ping_client",
    "examples/ping_server",

    "examples/dev_random",
    "examples/hello_part/src/beispiel_bojan",
]

[workspace.dependencies]
a653rs = "0.4"
log = "0"
