[package]
name = "beispiel_bojan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencas = { git = "https://github.com/aeronautical-informatics/openCAS.git", branch = "dev/vincer239" }
cas_calculation = { git = "https://github.com/aeronautical-informatics/openCAS.git", branch = "dev/vincer239" }
uom = { git = "https://github.com/wucke13/uom.git", branch = "fix-missing-libm", default-features = false, features = [ "f32", "si", "libm" ] }